--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "^17.3.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typescript-cookie": "^1.0.6",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@angular/cli": "^17.3.3",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^3.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
