--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
     "jwt-decode": "^4.0.0",
     "ng2-datepicker": "^12.0.0",
     "ngx-bootstrap": "^12.0.0",
